--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
     </mat-sidenav>
 
     <mat-sidenav-content fixedInViewport="true" scrollable="false" class="home__content">
-      <app-detail></app-detail>
+      <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
