--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,23 +4,13 @@
 
 .home {
   &__sidenav {
-    padding: 16px;
     width: 300px;
     
-    border-right: 1px solid rgba(0,0,0,0.2);;
+    border-right: 1px solid rgba(0,0,0,0.2);
   }
 
   &__content {
-    padding: 16px;
-
-    height: calc(100vh - 96px);
+    height: calc(100vh - 16px);
     overflow: hidden;
-  }
-
-  &__table {
-    height: 100%;
-    width: 100%;
-
-    overflow-y: auto;
   }
 }
