--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,32 +1,39 @@
-<button class="button button__create" mat-button (click)="addCategory()">Добавить категорию</button>
+<div class="navigation">
+  <div class="navigation__title-container">
+    <button class="button button__create" mat-button (click)="addCategory()">Добавить</button>
+</div>
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
   <!-- This is the tree node template for leaf nodes -->
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-    <li class="mat-tree-node" (click)="onSelectCategory(node.id)">
+    <li class="mat-tree-node" (click)="onSelectCategory(node)">
       <!-- use a disabled button to provide padding for tree leaf -->
-      <button mat-icon-button disabled></button>
-      <span>{{node.name}}</span>
-      <span class="menu-button">
-        <mat-icon [matMenuTriggerFor]="contextMenu" (click)="context = node.id; $event.stopPropagation()">more_horiz</mat-icon>
-      </span>
+      <div class="navigation__node-view"></div>
+      <div class="node__container">
+        <span>{{node.name}}</span>
+        <span class="menu-button">
+          <mat-icon [matMenuTriggerFor]="contextMenu" (click)="context = node.id; $event.stopPropagation()">more_horiz</mat-icon>
+        </span>
+      </div>
     </li>
   </mat-tree-node>
   <!-- This is the tree node template for expandable nodes -->
   <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
     <li>
-      <div class="mat-tree-node" (click)="onSelectCategory(node.id)">
+      <div class="mat-tree-node" (click)="onSelectCategory(node)">
         <button mat-icon-button matTreeNodeToggle
                 [attr.aria-label]="'Toggle ' + node.name">
           <mat-icon class="mat-icon-rtl-mirror">
             {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
           </mat-icon>
         </button>
-        <span>{{node.name}}</span>
-        <span class="menu-button">
-          <mat-icon [matMenuTriggerFor]="contextMenu" (click)="context = node.id; $event.stopPropagation()">more_horiz</mat-icon>
-        </span>
+        <div class="node__container">
+          <span>{{node.name}}</span>
+          <span class="menu-button">
+            <mat-icon [matMenuTriggerFor]="contextMenu" (click)="context = node.id; $event.stopPropagation()">more_horiz</mat-icon>
+          </span>
+        </div>
       </div>
-      <ul style="padding-left: 12px;" [class.example-tree-invisible]="!treeControl.isExpanded(node)">
+      <ul style="padding-left: 24px;" [class.example-tree-invisible]="!treeControl.isExpanded(node)">
         <ng-container matTreeNodeOutlet></ng-container>
       </ul>
     </li>
