--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -3,6 +3,14 @@
     <div class="detail__title">
       {{name}}
     </div>
+    <div class="detail__stat-panel">
+      <div class="stat-panel__row">
+        <span class="stat-panel__label">Последнее изменение: </span> <span>{{dataSourceTable[0]?.date | date}}</span>
+      </div>
+      <div>
+        <span class="stat-panel__label">Затраты: </span><span>{{costSum}} BYN</span>
+      </div>
+    </div>
     <button class="detail__add-button" mat-button (click)="onCreateRecord()">Добавить</button>
   </div>
   <div class="detail__content">
