feat(details): add new row

--- a/src/app/detail/create-record/create-record.component.html
+++ b/src/app/detail/create-record/create-record.component.html
@@ -9,8 +9,12 @@
         <input [required]="true" [formControlName]="'name'" matInput>
       </mat-form-field>
       <mat-form-field [floatLabel]="'always'">
-        <mat-label>Стоимость</mat-label>
+        <mat-label>Пробег</mat-label>
         <input [required]="true" [formControlName]="'cost'" matInput>
+      </mat-form-field>
+      <mat-form-field [floatLabel]="'always'">
+        <mat-label>Расход</mat-label>
+        <input [required]="true" [formControlName]="'mileage'" matInput>
       </mat-form-field>
       <mat-form-field appearance="fill" [floatLabel]="'always'">
         <mat-label>Дата</mat-label>
