--- a/src/app/shared/components/records-table/records-table.component.html
+++ b/src/app/shared/components/records-table/records-table.component.html
@@ -1,4 +1,4 @@
-<mat-table *ngIf="data.length" [dataSource]="data" class="records-table">
+<mat-table *ngIf="data.length" [dataSource]="data" class="records-table" [style.height]="stretch ? 'calc(100% - 112px)' : 'auto'">
   <ng-container matColumnDef="position">
     <mat-header-cell *matHeaderCellDef> № </mat-header-cell>
     <mat-cell *matCellDef="let row; let i = index"> {{i + 1}} </mat-cell>
