feat(navigation-component): add selection styles

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -9,7 +9,7 @@
       <!-- use a disabled button to provide padding for tree leaf -->
       <div class="navigation__node-view"></div>
       <div class="node__container">
-        <span>{{node.name}}</span>
+        <span [style.fontWeight]="selectedCategory === node.id ? 'bold' : 'normal'">{{node.name}}</span>
         <span class="menu-button">
           <mat-icon [matMenuTriggerFor]="contextMenu" (click)="context = node.id; $event.stopPropagation()">more_horiz</mat-icon>
         </span>
@@ -27,7 +27,7 @@
           </mat-icon>
         </button>
         <div class="node__container">
-          <span>{{node.name}}</span>
+          <span [style.fontWeight]="selectedCategory === node.id ? 'bold' : 'normal'">{{node.name}}</span>
           <span class="menu-button">
             <mat-icon [matMenuTriggerFor]="contextMenu" (click)="context = node.id; $event.stopPropagation()">more_horiz</mat-icon>
           </span>
