fix(app): build

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -42,8 +42,8 @@
 
 <mat-menu #contextMenu="matMenu">
   <ng-template matMenuContent>
-      <button mat-menu-item (click)="onEdit($event)">Редактировать</button>
-      <button mat-menu-item (click)="onDelete($event)">Удалить</button>
+      <button mat-menu-item (click)="onEdit()">Редактировать</button>
+      <button mat-menu-item (click)="onDelete()">Удалить</button>
   </ng-template>
 </mat-menu>
 
