--- a/src/app/shared/components/records-table/records-table.component.scss
+++ b/src/app/shared/components/records-table/records-table.component.scss
@@ -22,6 +22,6 @@
   background: #F7F7F7;
 }
 
-.mat-row:hover .detail__menu-column {
+.mat-row:hover .records-table__menu-column {
   visibility: visible;
 }
