feat(app): layout for select or create db

--- a/src/app/category-details/category-details.component.scss
+++ b/src/app/category-details/category-details.component.scss
@@ -28,7 +28,7 @@
   &__content {
     padding: 0px 32px 32px 32px;
     height: calc(100% - 122px);
-    overflow-y: scroll;
+    overflow-y: auto;
     position: relative;
   }
 
