--- a/src/app/shared/components/records-table/records-table.component.scss
+++ b/src/app/shared/components/records-table/records-table.component.scss
@@ -1,7 +1,7 @@
 .records {
   &-table {
     font-family: Ubuntu;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     border: 1px solid rgba(0,0,0,0.2);
     border-radius: 4px;
