fix(create-record): mileage required field

--- a/src/app/detail/create-record/create-record.component.html
+++ b/src/app/detail/create-record/create-record.component.html
@@ -10,7 +10,7 @@
       </mat-form-field>
       <mat-form-field [floatLabel]="'always'">
         <mat-label>Пробег</mat-label>
-        <input [required]="true" [formControlName]="'mileage'" matInput>
+        <input [formControlName]="'mileage'" matInput>
       </mat-form-field>
       <mat-form-field [floatLabel]="'always'">
         <mat-label>Расход</mat-label>
