--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="detail__stat-panel">
       <div class="stat-panel__row">
-        <span class="stat-panel__label">Последнее изменение: </span> <span>{{dataSourceTable[0]?.date | date}}</span>
+        <span class="stat-panel__label">Последнее изменение: </span> <span>{{dataSourceTable[0]?.date | date:'d MMM, y'}}</span>
       </div>
       <div>
         <span class="stat-panel__label">Общий расход: </span><span>{{costSum}} BYN</span>
