--- a/src/app/shared/components/records-table/records-table.component.html
+++ b/src/app/shared/components/records-table/records-table.component.html
@@ -1,27 +1,54 @@
 <mat-table *ngIf="data.length" [dataSource]="data" class="records-table" [style.height]="stretch ? 'calc(100% - 132px)' : 'auto'">
   <ng-container matColumnDef="position">
-    <mat-header-cell *matHeaderCellDef> № </mat-header-cell>
-    <mat-cell *matCellDef="let row; let i = index"> {{i + 1}} </mat-cell>
+    <mat-header-cell *matHeaderCellDef class="records-table__cell-id"> № </mat-header-cell>
+    <mat-cell class="records-table__cell-id"
+              *matCellDef="let row; let i = index">
+      {{i + 1}}
+    </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="name">
     <mat-header-cell *matHeaderCellDef> Имя </mat-header-cell>
-    <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
+    <mat-cell *matCellDef="let row">
+      <div class="records-table__cell-text"
+           [matTooltip]="row.name"
+           [matTooltipPosition]="'above'">
+        {{row.name}}
+      </div>
+    </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="mileage">
     <mat-header-cell *matHeaderCellDef> Пробег (км) </mat-header-cell>
-    <mat-cell *matCellDef="let row"> {{row.mileage | number | numberSeparator:' '}} </mat-cell>
+    <mat-cell *matCellDef="let row">
+      <div class="records-table__cell-text"
+           [matTooltip]="row.mileage | number | numberSeparator:separator"
+           [matTooltipPosition]="'above'">
+        {{row.mileage | number | numberSeparator:separator}}
+      </div>
+    </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="date">
     <mat-header-cell *matHeaderCellDef> Дата </mat-header-cell>
-    <mat-cell *matCellDef="let row"> {{row.date | date:'d MMM, y'}} </mat-cell>
+    <mat-cell *matCellDef="let row">
+      <div class="records-table__cell-text"
+           [matTooltip]="row.date | date:dateFormat"
+           [matTooltipPosition]="'above'">
+        {{row.date | date:dateFormat}}
+      </div>
+    </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="cost">
     <mat-header-cell *matHeaderCellDef> Расход (BYN) </mat-header-cell>
-    <mat-cell *matCellDef="let row"> {{row.cost | number | numberSeparator:' '}} </mat-cell>
+    <mat-cell *matCellDef="let row">
+      <div class="records-table__cell-text"
+           [matTooltip]="row.cost | number | numberSeparator:separator"
+           [matTooltipPosition]="'above'">
+        {{row.cost | number | numberSeparator:separator}}
+      </div>
+    </mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="notes">
