--- a/src/app/shared/components/records-table/records-table.component.html
+++ b/src/app/shared/components/records-table/records-table.component.html
@@ -19,8 +19,8 @@
   </ng-container>
 
   <ng-container matColumnDef="mileage">
-    <mat-header-cell *matHeaderCellDef> Пробег (км) </mat-header-cell>
-    <mat-cell *matCellDef="let row">
+    <mat-header-cell *matHeaderCellDef class="records-table__cell-mileage"> Пробег (км) </mat-header-cell>
+    <mat-cell class="records-table__cell-mileage" *matCellDef="let row">
       <div class="records-table__cell-text"
            [matTooltip]="row.mileage | number | numberSeparator:separator"
            [matTooltipPosition]="'above'">
@@ -30,8 +30,8 @@
   </ng-container>
 
   <ng-container matColumnDef="date">
-    <mat-header-cell *matHeaderCellDef> Дата </mat-header-cell>
-    <mat-cell *matCellDef="let row">
+    <mat-header-cell *matHeaderCellDef class="records-table__cell-date"> Дата </mat-header-cell>
+    <mat-cell class="records-table__cell-date" *matCellDef="let row">
       <div class="records-table__cell-text"
            [matTooltip]="row.date | date:dateFormat"
            [matTooltipPosition]="'above'">
@@ -41,8 +41,8 @@
   </ng-container>
 
   <ng-container matColumnDef="cost">
-    <mat-header-cell *matHeaderCellDef> Расход (BYN) </mat-header-cell>
-    <mat-cell *matCellDef="let row">
+    <mat-header-cell *matHeaderCellDef class="records-table__cell-cost"> Расход (BYN) </mat-header-cell>
+    <mat-cell class="records-table__cell-cost" *matCellDef="let row">
       <div class="records-table__cell-text"
            [matTooltip]="row.cost | number | numberSeparator:separator"
            [matTooltipPosition]="'above'">
@@ -52,8 +52,8 @@
   </ng-container>
 
   <ng-container matColumnDef="notes">
-    <mat-header-cell *matHeaderCellDef> Заметка </mat-header-cell>
-    <mat-cell *matCellDef="let row">
+    <mat-header-cell *matHeaderCellDef class="records-table__cell-note"> Заметка </mat-header-cell>
+    <mat-cell class="records-table__cell-note" *matCellDef="let row">
       <mat-icon *ngIf="row.notes"
                 [matTooltip]="row.notes"
                 [matTooltipPosition]="'above'">
