--- a/src/app/shared/components/release-notes/release-notes.component.scss
+++ b/src/app/shared/components/release-notes/release-notes.component.scss
@@ -1,9 +1,12 @@
 .release-notes {
+  position: relative;
+
   &__title {
     height: 64px;
     padding: 0 24px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
     font-family: Ubuntu;
     font-weight: lighter;
@@ -14,11 +17,9 @@
   }
 
   &__content {
-    padding: 24px;
-  }
-
-  &__section {
-    margin-bottom: 24px;
+    display: flex;
+    flex-direction: column;
+    padding: 36px 24px 24px 24px;
   }
 
   &__section-title {
@@ -32,5 +33,13 @@
     font-size: 16px;
     line-height: 24px;
     color: #333;
+  }
+
+  &__version-select {
+    width: 128px;
+    align-self: flex-end;
+
+    position: absolute;
+    top: 80px;
   }
 }
