--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,50 +1,13 @@
 <div class="navigation">
   <div class="navigation__title-container">
     <button class="button button__create" mat-button (click)="addCategory()">Добавить</button>
-</div>
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
-  <!-- This is the tree node template for leaf nodes -->
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle>
-    <li class="mat-tree-node" (click)="onSelectCategory(node)">
-      <!-- use a disabled button to provide padding for tree leaf -->
-      <div class="navigation__node-view"></div>
-      <div class="node__container">
-        <span [style.fontWeight]="selectedCategory?.id === node.id ? 'bold' : 'normal'">{{node.name}}</span>
-        <span class="menu-button">
-          <mat-icon [matMenuTriggerFor]="contextMenu" (click)="context = node; $event.stopPropagation()">more_horiz</mat-icon>
-        </span>
-      </div>
-    </li>
-  </mat-tree-node>
-  <!-- This is the tree node template for expandable nodes -->
-  <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-    <li>
-      <div class="mat-tree-node" (click)="onSelectCategory(node)">
-        <button mat-icon-button matTreeNodeToggle
-                [attr.aria-label]="'Toggle ' + node.name">
-          <mat-icon class="mat-icon-rtl-mirror">
-            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-          </mat-icon>
-        </button>
-        <div class="node__container">
-          <span [style.fontWeight]="selectedCategory?.id === node.id ? 'bold' : 'normal'">{{node.name}}</span>
-          <span class="menu-button">
-            <mat-icon [matMenuTriggerFor]="contextMenu" (click)="context = node; $event.stopPropagation()">more_horiz</mat-icon>
-          </span>
-        </div>
-      </div>
-      <ul style="padding-left: 24px;" [class.example-tree-invisible]="!treeControl.isExpanded(node)">
-        <ng-container matTreeNodeOutlet></ng-container>
-      </ul>
-    </li>
-  </mat-nested-tree-node>
-</mat-tree>
+  </div>
 
-<mat-menu #contextMenu="matMenu">
-  <ng-template matMenuContent>
-      <button *ngIf="isRootCategory(context)" mat-menu-item (click)="addCategory(context)">Добавить</button>
-      <button mat-menu-item (click)="onEdit()">Редактировать</button>
-      <button mat-menu-item (click)="onDelete()">Удалить</button>
-  </ng-template>
-</mat-menu>
+  <app-categories-tree [catagories]="categories"
+                      (add)="addCategory($event)"
+                      (edit)="onEdit($event)"
+                      (select)="onSelectCategory($event)"
+                      (delete)="onDelete($event)">
+  </app-categories-tree>
+</div>
 
