fix(app): font style for select component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,8 @@ html, body {
 .mat-tooltip {
   font-size: 14px;
 }
+
+.mat-select-value-text,
+.mat-date-picker-input {
+  font-family: 'Ubuntu';
+}
