--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,17 @@ html, body {
 .mat-date-picker-input {
   font-family: 'Ubuntu';
 }
+
+.menu-item.mat-menu-item {
+  display: flex;
+  align-items: center;
+
+  font-family: 'Ubuntu';
+  color: #111;
+
+ .mat-icon {
+   margin-right: 4px;
+
+   color: rgb(140, 140, 140);
+  }
+}
