--- a/src/app/shared/components/records-table/records-table.component.html
+++ b/src/app/shared/components/records-table/records-table.component.html
@@ -79,7 +79,13 @@
 
 <mat-menu #contextMenu="matMenu">
   <ng-template matMenuContent>
-      <button mat-menu-item (click)="onEdit()">Редактировать</button>
-      <button mat-menu-item (click)="onDelete()">Удалить</button>
+    <button class="menu-item" mat-menu-item (click)="onEdit()">
+      <mat-icon>edit</mat-icon>
+      <span>Редактировать</span>
+    </button>
+    <button class="menu-item" mat-menu-item (click)="onDelete()">
+      <mat-icon>delete</mat-icon>
+      <span>Удалить</span>
+    </button>
   </ng-template>
 </mat-menu>
